--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,7 @@ jobs:
     - name: Executing `flake8`
       run: |
         # executing `flake8`
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 ./snapshot --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 ./snapshot --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 --statistics --show-source --max-line-length=128 --extend-ignore=E251,E701 -- snapshot
 
   util-linux:
     runs-on: ubuntu-latest
